# hip_example

./: CMakeLists.txt  Memset_cmdlist.h  README.md  checks.cpp  environment_nvidia  example.cpp  main.cpp  memory.cpp  memory.cu
docker/: README.md  gtest.patch  hip-libraries-cuda-ubuntu.Dockerfile  hip-libraries-rocm-ubuntu.Dockerfile
